Correct EN's use of Display Block on small screens

--- a/templates/css/parent-theme.css
+++ b/templates/css/parent-theme.css
@@ -139,6 +139,13 @@ body:not(.embedded) #main-content-inner {
   height: auto !important;
 }
 
+/* EN sets rows to be "display:block" on screen smaller than 600px. This can break layouts and a better solution is t set "flex-shrink" **/
+@media only screen and (max-width: 600px), only screen and (max-device-width: 600px){
+  .en__component--row {
+    display: initial;
+    flex-shrink: 0;
+  }
+}
 /************************************
  * Inputs
  ***********************************/
